--- a/scss/templates/_page-content.scss
+++ b/scss/templates/_page-content.scss
@@ -9,6 +9,13 @@
     }
   }
 
+  ul,
+  ol {
+    li {
+      @include mb-1;
+    }
+  }
+
   @media (min-width: $break-lg-phone) {
 
     padding-top: 10vh;
