--- a/scss/utilities/mixins/_text.scss
+++ b/scss/utilities/mixins/_text.scss
@@ -1,4 +1,30 @@
+@mixin MontserratLight {
+  -webkit-font-smoothing: auto;
+  font-family: $sans-serif;
+  .fonts-loaded & {
+    font-family: $MontserratLight;
+    font-weight: 300;
+  }
+}
+
+@mixin Montserrat {
+  font-family: $sans-serif;
+  .fonts-loaded & {
+    font-family: $Montserrat;
+    font-weight: 500;
+  }
+}
+
+@mixin MontserratBold {
+  font-family: $sans-serif;
+  .fonts-loaded & {
+    font-family: $MontserratBold;
+    font-weight: 700;
+  }
+}
+
 //** ALIGNMENT (align-left by default) **//
+
 // align right
 @mixin align-right {
   // > 540
