--- a/scss/utilities/modifiers/_mod-text.scss
+++ b/scss/utilities/modifiers/_mod-text.scss
@@ -1,3 +1,15 @@
+.MontserratLight {
+  @include MontserratLight;
+}
+
+.Montserrat {
+  @include Montserrat;
+}
+
+.MontserratBold {
+  @include MontserratBold;
+}
+
 //** ALIGNMENT (align-left by default) **//
 // align right
 .align-right {
