--- a/css/styles.css
+++ b/css/styles.css
@@ -180,49 +180,6 @@ img.lazyload {
   opacity: 1;
   transition: opacity .3s; }
 
-.ca-black-c {
-  color: #111; }
-
-.ca-white-c {
-  color: #FCFCFC; }
-
-.ca-charcoal-c {
-  color: #222; }
-
-.ca-grey-CCC-c {
-  color: #CCC; }
-
-.ca-grey-EEE-c {
-  color: #EEE; }
-
-.ca-warning {
-  color: #FF2222; }
-
-.theme-black {
-  background-color: #111;
-  background: #111;
-  color: #FCFCFC; }
-
-.theme-blue {
-  background-color: #00A2E1;
-  background: #00A2E1;
-  color: #FCFCFC; }
-
-.theme-green {
-  background-color: #7EB963;
-  background: #7EB963;
-  color: #FCFCFC; }
-
-.theme-purple {
-  background-color: #A0AFD4;
-  background: #A0AFD4;
-  color: #FCFCFC; }
-
-.theme-orange {
-  background-color: #F6BE1E;
-  background: #F6BE1E;
-  color: #FCFCFC; }
-
 .sans-serif {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
 
@@ -564,7 +521,6 @@ img {
   font-size: .875em; }
 
 .masthead {
-  background-color: #EEE;
   width: 100%;
   text-align: center; }
   .masthead p {
@@ -1405,3 +1361,51 @@ img {
 .flex-lead {
   flex: 1 0 100%;
   width: 100%; }
+
+.ca-black-c {
+  color: #111; }
+
+.ca-white-c {
+  color: #FCFCFC; }
+
+.ca-charcoal-c {
+  color: #222; }
+
+.ca-grey-CCC-c {
+  color: #CCC; }
+
+.ca-grey-EEE-c {
+  color: #EEE; }
+
+.ca-warning {
+  color: #FF2222; }
+
+.theme-light {
+  background-color: #EEE;
+  background: #EEE;
+  color: #555; }
+
+.theme-black {
+  background-color: #111;
+  background: #111;
+  color: #FCFCFC; }
+
+.theme-blue {
+  background-color: #00A2E1;
+  background: #00A2E1;
+  color: #FCFCFC; }
+
+.theme-green {
+  background-color: #7EB963;
+  background: #7EB963;
+  color: #FCFCFC; }
+
+.theme-purple {
+  background-color: #A0AFD4;
+  background: #A0AFD4;
+  color: #FCFCFC; }
+
+.theme-orange {
+  background-color: #F6BE1E;
+  background: #F6BE1E;
+  color: #FCFCFC; }
