--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -1,40 +1,19 @@
 // Concordus Colors
 
-//Base Colors
-$brand-primary: #39909A; // aquamarine
-$brand-secondary: #00A2E1; // light blue
-
-$link-color: $brand-secondary;
-$link-color-hover: mix(white, $brand-secondary, 25%);
-
-$brand-purple: #A0AFD4; // light purple
-$brand-dark-purple: #919FC2; // dark purple
-$brand-light-green: #7EB963; // light green
-$brand-peach: #FA7564; // peachy pink
-$brand-blue-dark: mix(black, $brand-secondary, 40%); // dark blue
-
-$brand-gradient-blue-1: linear-gradient(to bottom, $brand-secondary 10%, $brand-blue-dark 100%);
-
-$brand-gradient-blue-2: linear-gradient(to top, $brand-secondary 10%, $brand-blue-dark 100%);
-
-$text-color: #555;
-$heading-color: #333;
-$bg-color: #e1e0e0;
-
-$inverse-bg-color: mix(black, $brand-primary, 25%);
-$inverse-text-color: white;
-
-// Concordus Colors
-
 // Base
 $ca-black: #111;
 $ca-charcoal: #222;
 $ca-grey: #333;
+$ca-grey-555: #555;
 $ca-grey-CCC: #CCC;
 $ca-grey-EEE: #EEE;
 $ca-white: #FCFCFC;
 
 $ca-warning: #FF2222;
+
+$text-color: $ca-grey-555;
+$heading-color: $ca-grey;
+$bg-color: $ca-white;
 
 // ** Brand ** //
 
@@ -97,31 +76,13 @@ $calc-4: calc(1vw + 4em);
 $calc-5: calc(1vw + 5em);
 $calc-10: calc(1vw + 10em);
 
-.ca-black-c {
-  color: $ca-black;
-}
-
-.ca-white-c {
-  color: $ca-white;
-}
-
-.ca-charcoal-c {
-  color: $ca-charcoal;
-}
-
-.ca-grey-CCC-c {
-  color: $ca-grey-CCC;
-}
-
-.ca-grey-EEE-c {
-  color: $ca-grey-EEE;
-}
-
-.ca-warning {
- color: $ca-warning;
-}
-
 // theme colors
+
+@mixin theme-light {
+  background-color: $ca-grey-EEE;
+  background: $ca-grey-EEE;
+  color: $ca-grey-555;
+}
 
 @mixin theme-black {
   background-color: $ca-black;
@@ -159,22 +120,9 @@ $calc-10: calc(1vw + 10em);
   color: $ca-white;
 }
 
-.theme-black {
-  @include theme-black;
-}
+// gradients
 
-.theme-blue {
-  @include theme-blue;
-}
+$brand-gradient-blue: linear-gradient(to bottom, $ca-blue-light 10%, $ca-blue-dark 100%);
 
-.theme-green {
-  @include theme-green;
-}
+$brand-gradient-teal: linear-gradient(to top, $ca-teal-light 10%, $ca-teal 100%);
 
-.theme-purple {
-  @include theme-purple;
-}
-
-.theme-orange {
-  @include theme-orange;
-}
