--- a/css/modifiers.css
+++ b/css/modifiers.css
@@ -16,10 +16,42 @@
   font-weight: normal;
   font-style: normal; }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(10.5em, 1fr));
-  grid-gap: .5em; }
+@supports (grid-gap: 0) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10.5em, 1fr));
+    grid-gap: 1em; }
+    .grid .title {
+      grid-column: span 1;
+      width: 100%; } }
+
+@supports (grid-gap: 0) {
+  .grid-2-col {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10.5em, 1fr));
+    grid-gap: 1em; }
+    .grid-2-col .title {
+      grid-column: span 1;
+      width: 100%; } }
+
+@supports (grid-gap: 0) {
+  .grid-2-col {
+    grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
+    grid-gap: 4em; } }
+
+@supports (grid-gap: 0) {
+  .grid-4-col {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10.5em, 1fr));
+    grid-gap: 1em; }
+    .grid-4-col .title {
+      grid-column: span 1;
+      width: 100%; } }
+
+@supports (grid-gap: 0) {
+  .grid-4-col {
+    grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
+    grid-gap: 2em; } }
 
 .circle-mask {
   border-radius: 50%;
