--- a/scss/templates/_page-content.scss
+++ b/scss/templates/_page-content.scss
@@ -14,6 +14,11 @@
     padding-top: 10vh;
     padding-bottom: 10vh;
 
+    & + .page-content {
+      @include pt-0;
+      //@include pb-0;
+    }
+
     > .container {
       @include pt-0;
       @include pb-0;
