--- a/css/styles.css
+++ b/css/styles.css
@@ -326,25 +326,27 @@ a abbr[title] {
 .list-title {
   margin-left: -1rem; }
 
-:not(nav ul), ol {
+ul.list-styled, ol.list-styled {
   -webkit-font-smoothing: auto;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
-  .fonts-loaded :not(nav ul), .fonts-loaded ol {
+  .fonts-loaded ul.list-styled, .fonts-loaded ol.list-styled {
     font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     font-weight: 300; }
-  :not(nav ul).list-unstyled, ol.list-unstyled {
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
-    :not(nav ul).list-unstyled ul, ol.list-unstyled ul {
-      font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      margin-bottom: 0;
-      padding-top: 1em;
-      padding-bottom: 1em; }
-      :not(nav ul).list-unstyled ul li:last-child, ol.list-unstyled ul li:last-child {
-        margin-bottom: 0; }
-  :not(nav ul) li, ol li {
-    margin-bottom: .625rem; }
-    :not(nav ul) li:last-child, ol li:last-child {
+
+ul.list-unstyled, ol.list-unstyled {
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
+  ul.list-unstyled ul, ol.list-unstyled ul {
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    margin-bottom: 0;
+    padding-top: 1em;
+    padding-bottom: 1em; }
+    ul.list-unstyled ul li:last-child, ol.list-unstyled ul li:last-child {
       margin-bottom: 0; }
+
+ul li, ol li {
+  margin-bottom: .625rem; }
+  ul li:last-child, ol li:last-child {
+    margin-bottom: 0; }
 
 .border-title {
   border-bottom: 1px solid #DDD;
@@ -439,6 +441,23 @@ img {
   transform: rotate(-45deg); }
 
 .btn {
+  display: inline-block;
+  font-weight: normal;
+  line-height: 1.25;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   -webkit-font-smoothing: auto;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   letter-spacing: .05em;
@@ -446,38 +465,163 @@ img {
   .fonts-loaded .btn {
     font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     font-weight: 300; }
-  .btn.btn-xl {
-    font-size: 1.5em; }
 
-.btn-outline {
-  background-color: transparent;
-  border: 1px solid currentColor;
-  text-align: center; }
-  .btn-outline:hover, .btn-outline:focus {
-    background-color: #428bca;
-    border-color: transparent;
-    color: rgba(255, 255, 255, 0.8);
-    text-shadow: none; }
-  .btn-outline.btn-primary {
-    background-color: transparent;
-    color: #00A2E1; }
-  .btn-outline.btn-secondary {
-    background-color: transparent;
-    border-color: #CCC; }
+.btn-lg, .btn-group-lg > .btn {
+  padding: 0.75rem 1.5rem;
+  font-size: 1.25rem;
+  border-radius: 0.3rem; }
+
+.btn-xl {
+  font-size: 1.5em; }
+
+.btn:focus, .btn:hover {
+  text-decoration: none; }
+
+.btn:focus, .btn.focus {
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
+  box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25); }
+
+.btn.disabled, .btn:disabled {
+  cursor: not-allowed;
+  opacity: .65; }
+
+.btn:active, .btn.active {
+  background-image: none; }
+
+a.btn.disabled,
+fieldset[disabled] a.btn {
+  pointer-events: none; }
+
+.btn-secondary {
+  color: #292b2c;
+  background-color: #fff;
+  border-color: #ccc; }
+
+.btn-secondary:hover {
+  color: #292b2c;
+  background-color: #e6e6e6;
+  border-color: #adadad; }
+
+.btn-secondary:focus, .btn-secondary.focus {
+  -webkit-box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5);
+  box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5); }
+
+.btn-secondary.disabled, .btn-secondary:disabled {
+  background-color: #fff;
+  border-color: #ccc; }
+
+.btn-secondary:active, .btn-secondary.active,
+.show > .btn-secondary.dropdown-toggle {
+  color: #292b2c;
+  background-color: #e6e6e6;
+  background-image: none;
+  border-color: #adadad; }
+
+.btn-sm, .btn-group-sm > .btn {
+  padding: 0.25rem 0.5rem;
+  font-size: 0.875rem;
+  border-radius: 0.2rem; }
+
+.btn-block {
+  display: block;
+  width: 100%; }
+
+.btn-block + .btn-block {
+  margin-top: 0.5rem; }
+
+input[type="submit"].btn-block,
+input[type="reset"].btn-block,
+input[type="button"].btn-block {
+  width: 100%; }
+
+.btn-primary {
+  color: #fff;
+  background-color: #0275d8;
+  border-color: #0275d8;
+  background-color: #00A2E1;
+  border-color: #00A2E1; }
+  .btn-primary:hover {
+    color: #fff;
+    background-color: #025aa5;
+    border-color: #01549b; }
+  .btn-primary:focus, .btn-primary.focus {
+    box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.5); }
+  .btn-primary.disabled, .btn-primary:disabled {
+    background-color: #0275d8;
+    border-color: #0275d8; }
+  .btn-primary:active, .btn-primary.active,
+  .btn-primary.show > .btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #025aa5;
+    background-image: none;
+    border-color: #01549b; }
+  .btn-primary:hover, .btn-primary:focus {
+    background-color: #007aa9;
+    border-color: #007aa9;
+    color: #fff; }
 
 .btn-round {
   border-radius: 5rem; }
-  .btn-round .icon-outline {
+  .btn-round > .icon-outline {
     margin-right: .625rem; }
 
 .btn-text {
   color: #00A2E1;
   padding: 0; }
 
-.btn-primary {
+.btn-brand {
+  display: inline-block;
+  font-weight: normal;
+  line-height: 1.25;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-font-smoothing: auto;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  letter-spacing: .05em;
+  text-shadow: none;
+  padding: 0.75rem 1.5rem;
+  font-size: 1.25rem;
+  border-radius: 0.3rem;
+  border-radius: 5rem;
+  color: #fff;
+  background-color: #0275d8;
+  border-color: #0275d8;
   background-color: #00A2E1;
   border-color: #00A2E1; }
-  .btn-primary:hover, .btn-primary:focus {
+  .fonts-loaded .btn-brand {
+    font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-weight: 300; }
+  .btn-brand > .icon-outline {
+    margin-right: .625rem; }
+  .btn-brand:hover {
+    color: #fff;
+    background-color: #025aa5;
+    border-color: #01549b; }
+  .btn-brand:focus, .btn-brand.focus {
+    box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.5); }
+  .btn-brand.disabled, .btn-brand:disabled {
+    background-color: #0275d8;
+    border-color: #0275d8; }
+  .btn-brand:active, .btn-brand.active,
+  .btn-brand.show > .btn-brand.dropdown-toggle {
+    color: #fff;
+    background-color: #025aa5;
+    background-image: none;
+    border-color: #01549b; }
+  .btn-brand:hover, .btn-brand:focus {
     background-color: #007aa9;
     border-color: #007aa9;
     color: #fff; }
@@ -1255,6 +1399,9 @@ img {
   flex-grow: 1;
   padding-top: 5em;
   padding-bottom: 5em; }
+  @media (min-width: 50em) {
+    .bg-full {
+      height: 50vh; } }
 
 .bg-hero {
   background-position: center;
@@ -1271,6 +1418,9 @@ img {
   padding-bottom: 5em;
   font-size: calc( 1rem + (40 - 28) * ( (100vw - 400px) / ( 2000 - 400)));
   height: 100vh; }
+  @media (min-width: 50em) {
+    .bg-hero {
+      height: 50vh; } }
   .bg-hero .h1, .bg-hero h1 {
     font-size: 2.5em;
     margin-bottom: .625rem; }
