--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -1,13 +1,80 @@
-.btn {
+// Bootstrap defaults
+
+@mixin button {
+  display: inline-block;
+  font-weight: normal;
+  line-height: 1.25;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  border: 1px solid transparent;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  // custom
   @include MontserratLight;
   letter-spacing: .05em;
   text-shadow: none;
-  &.btn-xl {
-    @include text-lg;
+}
+
+@mixin button-lg {
+  padding: 0.75rem 1.5rem;
+  font-size: 1.25rem;
+  border-radius: 0.3rem;
+}
+
+@mixin button-xl {
+  @include text-lg;
+}
+
+@mixin button-primary {
+
+  color: #fff;
+  background-color: #0275d8;
+  border-color: #0275d8;
+
+  &:hover {
+    color: #fff;
+    background-color: #025aa5;
+    border-color: #01549b;
+  }
+
+  &:focus, &.focus {
+    box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.5);
+  }
+
+  &.disabled, &:disabled {
+    background-color: #0275d8;
+    border-color: #0275d8;
+  }
+
+  &:active, &.active,
+  &.show > &.dropdown-toggle {
+    color: #fff;
+    background-color: #025aa5;
+    background-image: none;
+    border-color: #01549b;
+  }
+
+  // custom
+  background-color: $ca-blue;
+  border-color: $ca-blue;
+  &:hover,
+  &:focus {
+    background-color: $ca-blue-dark;
+    border-color: $ca-blue-dark;
+    color: #fff;
   }
 }
 
-.btn-outline {
+@mixin button-outline {
   background-color: transparent;
   border: 1px solid currentColor;  
   text-align: center;
@@ -20,23 +87,121 @@
     text-shadow: none;
   }
 
-  &.btn-primary {
+  &.button-primary {
     background-color: transparent;
     color: $ca-blue;
   }
 
-  &.btn-secondary {
+  &.button-secondary {
     background-color: transparent;
     border-color: $ca-grey-CCC;
   }
 
 }
 
-.btn-round {
+@mixin button-round {
   border-radius: 5rem;
-  .icon-outline {
+  > .icon-outline {
     @include mr-sm;
   }
+}
+
+// class modifiers
+
+.btn {
+  @include button;
+}
+
+.btn-lg, .btn-group-lg > .btn {
+  @include button-lg;
+}
+
+.btn-xl {
+  @include button-xl;
+}
+
+.btn:focus, .btn:hover {
+  text-decoration: none;
+}
+
+.btn:focus, .btn.focus {
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
+          box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
+}
+
+.btn.disabled, .btn:disabled {
+  cursor: not-allowed;
+  opacity: .65;
+}
+
+.btn:active, .btn.active {
+  background-image: none;
+}
+
+a.btn.disabled,
+fieldset[disabled] a.btn {
+  pointer-events: none;
+}
+
+
+.btn-secondary {
+  color: #292b2c;
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+.btn-secondary:hover {
+  color: #292b2c;
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+
+.btn-secondary:focus, .btn-secondary.focus {
+  -webkit-box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5);
+          box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5);
+}
+
+.btn-secondary.disabled, .btn-secondary:disabled {
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+.btn-secondary:active, .btn-secondary.active,
+.show > .btn-secondary.dropdown-toggle {
+  color: #292b2c;
+  background-color: #e6e6e6;
+  background-image: none;
+  border-color: #adadad;
+}
+
+.btn-sm, .btn-group-sm > .btn {
+  padding: 0.25rem 0.5rem;
+  font-size: 0.875rem;
+  border-radius: 0.2rem;
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.btn-block + .btn-block {
+  margin-top: 0.5rem;
+}
+
+input[type="submit"].btn-block,
+input[type="reset"].btn-block,
+input[type="button"].btn-block {
+  width: 100%;
+}
+
+.btn-primary {
+  @include button-primary;
+}
+
+.btn-round {
+  @include button-round;
 }
 
 .btn-text {
@@ -44,17 +209,9 @@
   @include p-0;
 }
 
-.btn-primary {
-  background-color: $ca-blue;
-  border-color: $ca-blue;
-  &:hover,
-  &:focus {
-    background-color: $ca-blue-dark;
-    border-color: $ca-blue-dark;
-    color: #fff;
-  }
-}
-
-.btn-secondary {
-  
+.btn-brand {
+  @include button;
+  @include button-lg;
+  @include button-round;
+  @include button-primary;
 }
