--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@
   @supports (grid-gap: 0) {
     .grid-2-col {
       grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
-      grid-gap: 4em; } }
+      grid-gap: 3em; } }
 
 .grid-4-col {
   display: flex;
@@ -268,10 +268,18 @@ a {
   transition: color .4s ease; }
 
 p {
-  font-size: 1.1em;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: auto;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 1.1em; }
+  .fonts-loaded p {
+    font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-weight: 300; }
   p a {
-    text-decoration: none; }
+    color: #00A2E1;
+    text-decoration: underline; }
+    @supports (text-decoration-skip: ink) {
+      p a {
+        text-decoration-skip: ink; } }
 
 .lead {
   -webkit-font-smoothing: auto;
@@ -383,6 +391,9 @@ img {
 
 .container {
   max-width: 85rem;
+  width: 100%; }
+
+.row {
   width: 100%; }
 
 #main {
@@ -984,6 +995,15 @@ input[type="button"].btn-block {
 .mr-1 {
   margin-right: 1rem; }
 
+.mr-2 {
+  margin-right: 2rem; }
+
+.mr-3 {
+  margin-right: 3rem; }
+
+.mr-4 {
+  margin-right: 4rem; }
+
 .ml-a {
   margin-left: auto; }
 
@@ -998,6 +1018,15 @@ input[type="button"].btn-block {
 
 .ml-1 {
   margin-left: 1rem; }
+
+.ml-2 {
+  margin-left: 2rem; }
+
+.ml-3 {
+  margin-left: 3rem; }
+
+.ml-4 {
+  margin-left: 4rem; }
 
 .p-0 {
   padding: 0; }
