--- a/scss/utilities/mixins/_margin.scss
+++ b/scss/utilities/mixins/_margin.scss
@@ -93,6 +93,18 @@
   margin-right: 1rem;  
 }
 
+@mixin mr-2 {
+  margin-right: 2rem;  
+}
+
+@mixin mr-3 {
+  margin-right: 3rem;  
+}
+
+@mixin mr-4 {
+  margin-right: 4rem;  
+}
+
 // Margin Left
 
 @mixin ml-a {
@@ -113,4 +125,16 @@
 
 @mixin ml-1 {
   margin-left: 1rem;  
+}
+
+@mixin ml-2 {
+  margin-left: 2rem;  
+}
+
+@mixin ml-3 {
+  margin-left: 3rem;  
+}
+
+@mixin ml-4 {
+  margin-left: 4rem;  
 }
