--- a/scss/utilities/modifiers/_mod-backgrounds.scss
+++ b/scss/utilities/modifiers/_mod-backgrounds.scss
@@ -28,5 +28,9 @@
             url(../images/bg/bg-hero-globe-dark-lg.jpg) 2x);
   }
 
+  &-user {
+    background-image: url(../images/bg/bg-hero-user-man.jpg);
+  }
+
 }
 
