--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -27,7 +27,6 @@
 @mixin button-lg {
   padding: 0.75rem 1.5rem;
   font-size: 1.25rem;
-  border-radius: 0.3rem;
 }
 
 @mixin button-xl {
@@ -87,12 +86,12 @@
     text-shadow: none;
   }
 
-  &.button-primary {
+  &.btn-primary {
     background-color: transparent;
     color: $ca-blue;
   }
 
-  &.button-secondary {
+  &.btn-secondary {
     background-color: transparent;
     border-color: $ca-grey-CCC;
   }
@@ -215,7 +214,6 @@ input[type="button"].btn-block {
 .btn-lg, .btn-group-lg > .btn {
   @include button-lg;
 }
-
 
 .btn-xl {
   @include button-xl;
