--- a/css/styles.css
+++ b/css/styles.css
@@ -615,7 +615,6 @@ input[type="button"].btn-block {
   text-shadow: none;
   padding: 0.75rem 1.5rem;
   font-size: 1.25rem;
-  border-radius: 0;
   border-radius: 5rem;
   color: #fff;
   background-color: #0275d8;
@@ -649,8 +648,7 @@ input[type="button"].btn-block {
 
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.75rem 1.5rem;
-  font-size: 1.25rem;
-  border-radius: 0; }
+  font-size: 1.25rem; }
 
 .btn-xl {
   font-size: 1.5em;
