--- a/css/modifiers.css
+++ b/css/modifiers.css
@@ -18,7 +18,9 @@
 
 .grid {
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  padding: 0 !important;
+  max-width: 100%; }
   .grid > * {
     flex-grow: 1;
     padding: 1em;
@@ -33,7 +35,9 @@
 
 .grid-2-col {
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  padding: 0 !important;
+  max-width: 100%; }
   .grid-2-col > * {
     flex-grow: 1;
     padding: 1em;
@@ -52,7 +56,9 @@
 
 .grid-4-col {
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  padding: 0 !important;
+  max-width: 100%; }
   .grid-4-col > * {
     flex-grow: 1;
     padding: 1em;
@@ -66,8 +72,11 @@
         padding: 0; } }
   @supports (grid-gap: 0) {
     .grid-4-col {
-      grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
-      grid-gap: 2em; } }
+      grid-template-columns: repeat(auto-fit, minmax(16.5em, 1fr));
+      grid-gap: 2em; }
+      @media (min-width: 60em) and (max-width: 85em) {
+        .grid-4-col {
+          grid-template-columns: repeat(auto-fit, minmax(25em, 1fr)); } } }
 
 .circle-mask {
   border-radius: 50%;
